--- a/views/SwapViews/myRequest.html.twig
+++ b/views/SwapViews/myRequest.html.twig
@@ -7,7 +7,7 @@
     <div class='generalContentMyRequest'>
         <h1>Mes demandes</h1>
 
-        <div class="resultSearch">Aucune demande en attende de validation</div>
+        <div class="resultSearch">Aucun échange en cours</div>
     </div>
 
 {% endblock %}
