--- a/public/stylesheets/sass/_swap.scss
+++ b/public/stylesheets/sass/_swap.scss
@@ -55,6 +55,21 @@
             cursor: pointer;
             margin-left: 10px;
         }
+    }
+}
 
+.generalContentHistory {
+    text-align: center;
+    .oneProduct {
+        width: 20%;
+        display: inline-block;
+        padding-bottom: 50px;
+
+        img.principal{
+            display: block;
+            margin: 0px auto;
+            width: 50%;
+            max-height: 190px;
+        }
     }
 }
