--- a/views/SwapViews/history.html.twig
+++ b/views/SwapViews/history.html.twig
@@ -8,7 +8,7 @@
     <div class='generalContentHistory'>
         <h1>Mon historique</h1>
 
-
+        <div class="resultSearch">Aucun échange en cours</div>
     </div>
 
 {% endblock %}
