--- a/public/stylesheets/sass/_swap.scss
+++ b/public/stylesheets/sass/_swap.scss
@@ -71,5 +71,10 @@
             width: 50%;
             max-height: 190px;
         }
+
+        span.spanPseudo {
+            display: block;
+            font-weight: bold;
+        }
     }
 }
