--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -161,3 +161,4 @@ body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-ch
 .generalContentHistory { text-align: center; }
 .generalContentHistory .oneProduct { width: 20%; display: inline-block; padding-bottom: 50px; }
 .generalContentHistory .oneProduct img.principal { display: block; margin: 0px auto; width: 50%; max-height: 190px; }
+.generalContentHistory .oneProduct span.spanPseudo { display: block; font-weight: bold; }
