--- a/public/stylesheets/sass/_base.scss
+++ b/public/stylesheets/sass/_base.scss
@@ -8,7 +8,7 @@ $ico-libraryRight-header: '\e901';
 $color-corporate-one: #092D3D;
 $color-corporate-two: #FF6664;
 $color-corporate-three: #FFFFFF;
-$color-font-content-gray: #CCCCCC;
+$color-font-content-gray: rgba(204, 204, 204, 0.9);
 $color-font-content-white: #FFFFFF;
 $color-subTitle: #A52A2A;
 
