--- a/views/template.html.twig
+++ b/views/template.html.twig
@@ -69,7 +69,7 @@
         </div>
 
         <footer>
-            <div id='footer'>&copy; LibrarizeMe 2017  {{ result.etatMenu }} {{ result['etatMenu'] }} {{ result.getEtatMenu }}</div>
+            <div id='footer'>&copy; LibrarizeMe 2017</div>
         </footer>
     </body>
 
