--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,7 +13,7 @@ button { color: #fff; background-color: #5cb85c; border-color: #4cae4c; display:
 
 select { display: block; height: 34px; padding: 6px 12px; font-size: 14px; line-height: 1.42857143; color: #555; background-color: #fff; background-image: none; border: 1px solid #ccc; }
 
-.content .contentLogin { background-color: #CCCCCC; width: 33%; margin-left: auto; margin-right: auto; padding-bottom: 20px; border-radius: 15px; margin-top: 10%; }
+.content .contentLogin { background-color: rgba(204, 204, 204, 0.9); width: 33%; margin-left: auto; margin-right: auto; padding-bottom: 20px; border-radius: 15px; margin-top: 10%; }
 .content .contentLogin h1 { text-align: center; }
 .content .contentLogin form { text-align: center; }
 .content .contentLogin form .spaceLogin { margin-right: 25px; }
@@ -32,7 +32,7 @@ select { display: block; height: 34px; padding: 6px 12px; font-size: 14px; line-
 .bgdForgotPwd input[type='reset'] { margin-right: 10px; }
 
 @font-face { font-family: 'librarize'; src: url("../images/librarize.eot?p5irvb"); src: url("../images/librarize.eot?p5irvb#iefix") format("embedded-opentype"), url("../images/librarize.ttf?p5irvb") format("truetype"), url("../images/librarize.woff?p5irvb") format("woff"), url("../images/librarize.svg?p5irvb#icomoon") format("svg"); font-weight: normal; font-style: normal; }
-body { background-color: #092D3D; }
+body { background-color: #092D3D; background-image: url("/images/background.jpg"); }
 body .popin, body .contentPopin, body .popinResult, body .contentPopinFriendLibrary { display: none; }
 body header { font-family: 'librarize'; margin-left: auto; margin-right: auto; text-align: center; font-size: 60px; }
 body header .nameOrganization { display: inline-block; color: #FFFFFF; }
@@ -41,15 +41,15 @@ body header .libraryLeftIcon { display: inline-block; color: #FF6664; }
 body header .libraryLeftIcon:before { content: ""; }
 body header .libraryRightIcon { display: inline-block; color: #FF6664; }
 body header .libraryRightIcon:before { content: ""; }
-body footer { position: fixed; bottom: 0px; width: 80%; text-align: center; color: #FF6664; font-size: 14px; right: 10%; background-color: #092D3D; padding: 5px 0px; }
-body .menuDiv { background-color: #CCCCCC; width: 80%; margin: 0px auto; height: 35px; line-height: 35px; border-radius: 7px; text-align: center; font-weight: bold; }
+body footer { position: fixed; bottom: 0px; width: 80%; text-align: center; color: #092D3D; font-size: 14px; right: 10%; background-color: rgba(204, 204, 204, 0.9); padding: 5px 0px; border-radius: 7px; }
+body .menuDiv { background-color: rgba(204, 204, 204, 0.9); width: 80%; margin: 0px auto; height: 35px; line-height: 35px; border-radius: 7px; text-align: center; font-weight: bold; }
 body .menuDiv ul { padding: 0px; }
 body .menuDiv ul .titleMenu { display: inline-block; list-style-type: none; width: 19%; cursor: pointer; vertical-align: top; position: relative; }
 body .menuDiv ul .titleMenu ul { display: none; text-align: left; }
 body .menuDiv ul .titleMenu ul li { display: block; width: 100%; background-color: #FFFFFF; height: 40px; border-radius: 5px; margin-top: 5px; line-height: 35px; box-shadow: inset -6px -6px 5px 0px #656565; }
 body .menuDiv ul .titleMenu ul li div { width: auto; padding-left: 15px; }
 body .menuDiv ul a { color: black; text-decoration: none; }
-body .generalContent, body .generalContentSearchUsers, body .generalContentSeeInvitation, body .generalContentMyFriends, body .generalContentProductSearch, body .generalContentMyProducts, body .generalContentMyRequest, body .generalContentInProgress, body .generalContentHistory { background-color: #CCCCCC; width: 80%; margin: 0px auto; border-radius: 5px; padding-bottom: 25px; }
+body .generalContent, body .generalContentSearchUsers, body .generalContentSeeInvitation, body .generalContentMyFriends, body .generalContentProductSearch, body .generalContentMyProducts, body .generalContentMyRequest, body .generalContentInProgress, body .generalContentHistory { background-color: rgba(204, 204, 204, 0.9); width: 80%; margin: 0px auto; border-radius: 5px; padding-bottom: 25px; }
 body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-child, body .generalContentSeeInvitation h1:first-child, body .generalContentMyFriends h1:first-child, body .generalContentProductSearch h1:first-child, body .generalContentMyProducts h1:first-child, body .generalContentMyRequest h1:first-child, body .generalContentInProgress h1:first-child, body .generalContentHistory h1:first-child { text-align: center; }
 
 .msgInfo { position: fixed; top: 50%; left: 50%; width: 600px; margin-left: -300px; text-align: center; font-size: 20px; padding: 3px; border-radius: 5px; opacity: 0; z-index: 5; }
@@ -100,7 +100,7 @@ body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-ch
 .generalContentMyFriends .content .invitationType .oneUser span img.libraryImg, .generalContentSeeInvitation .content .invitationType .oneUser span img.libraryImg { width: 25px; }
 .generalContentMyFriends .content .invitationType .oneUser span img.imgDelFriend, .generalContentSeeInvitation .content .invitationType .oneUser span img.imgDelFriend { width: 18px; }
 
-.contentPopinFriendLibrary { width: 60%; background-color: #CCCCCC; position: fixed; top: 20%; left: 20%; z-index: 2; padding: 20px; text-align: center; }
+.contentPopinFriendLibrary { width: 60%; background-color: rgba(204, 204, 204, 0.9); position: fixed; top: 20%; left: 20%; z-index: 2; padding: 20px; text-align: center; }
 .contentPopinFriendLibrary img.closePopin { position: absolute; right: 0; top: 0; cursor: pointer; }
 .contentPopinFriendLibrary h1 { text-align: center; margin: 0; }
 .contentPopinFriendLibrary .resultSearchFriendProduct .oneProduct { width: 18%; display: inline-block; margin: 25px 10px; }
@@ -118,7 +118,7 @@ body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-ch
 
 .popin { width: 100%; height: 100%; position: fixed; background-color: rgba(9, 45, 61, 0.9); top: 0; left: 0; z-index: 1; }
 
-.contentPopin { width: 60%; height: 60%; background-color: #CCCCCC; position: fixed; top: 20%; left: 20%; z-index: 2; padding: 20px; }
+.contentPopin { width: 60%; height: 60%; background-color: rgba(204, 204, 204, 0.9); position: fixed; top: 20%; left: 20%; z-index: 2; padding: 20px; }
 .contentPopin .closePopin { position: absolute; right: 0; top: 0; cursor: pointer; }
 .contentPopin .left { display: inline-block; width: 31%; height: 100%; text-align: center; }
 .contentPopin .left .principalImg { height: 85%; width: 100%; margin-bottom: 5%; }
